--- a/css/kasper.css
+++ b/css/kasper.css
@@ -259,7 +259,7 @@ header nav .form i {
   width: 20px;
   border-radius: 50%;
   margin-right: 15px;
-  transition: 1s;
+  transition: .3s;
 }
 .landing .bullets li:hover {
   background-color: var(--main-color);
@@ -643,7 +643,7 @@ header nav .form i {
   border: 1px solid #aaa;
   border-radius: 50%;
   margin-right: 10px;
-  transition: 1s;
+  transition: .4s;
 }
 .our-skills .container .bullets li:hover {
   background-color: var(--main-color);
